log
Thu 24 Aug 2023 04:14:26 AM UTC: 
 tests:  0|6
total_score: 0/70
320e5d5
Thu 24 Aug 2023 03:08:06 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:3: error: ‘list’ undeclared (first use in this function); did you mean ‘List’?
   33 |   list->head = NULL;
      |   ^~~~
      |   List
list.c:33:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
d7db2ed
Thu 24 Aug 2023 03:08:22 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:34:8: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   34 |   lista->size = 0;
      |        ^~
Compilation failed
19a3212
Thu 24 Aug 2023 03:09:42 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
5581365
Thu 24 Aug 2023 03:52:21 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
6d3ad88
Thu 24 Aug 2023 03:53:21 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:6: error: expected ‘(’ before ‘list’
   40 |   if list->head == NULL{
      |      ^~~~
      |      (
list.c:40:10: error: statement with no effect [-Werror=unused-value]
   40 |   if list->head == NULL{
      |      ~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
395d3d9
Thu 24 Aug 2023 03:53:33 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
be98802
Thu 24 Aug 2023 04:06:54 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:51:10: error: unused variable ‘proximoNodo’ [-Werror=unused-variable]
   51 |   Node * proximoNodo = list->current->next;
      |          ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6a2b2eb
Thu 24 Aug 2023 04:07:57 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
ab8822d
Thu 24 Aug 2023 04:08:41 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c2406d5
Thu 24 Aug 2023 04:09:45 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  5|4
total_score: 25/70
41aef1a
Thu 24 Aug 2023 04:16:45 PM UTC: 
 list.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  5|4
total_score: 25/70
fb8a9c9
